   src/toolbar.c, src/toolbar.h:
   Add missing dox for types/files in the API.
 * src/filetypes.h, src/Makefile.am, plugins/geanyplugin.h:
   Don't install unnecessary headers: dialogs.h, main.h, plugins.h,
   sciwrappers.h, build.h. (This helps to get compiler warnings for uses
   of functions not in the API).
   Warning: any plugins that include these headers should remove them.


2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/saveactions.c:
   Fix adding the filetype's default extension when using the
   Instant Save plugin (closes #2885142).
 * src/main.c:
   Before looking for line and column numbers specified as part
   of a filename, ensure the file doesn't exist on disk. This allows
   opening of files like "test:0".
 * src/sidebar.c:
   Rename "select" variables into "selection" to avoid shadowed names.
 * plugins/geanyfunctions.h, src/plugins.c, src/plugindata.h:
   Add ui_widget_modify_font_from_string() and sci_goto_line()
   to the plugin API.
 * plugins/filebrowser.c:
   Rename "select" variables into "selection" to avoid shadowed names.
   Make use of ui_widget_modify_font_from_string().


2009-10-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.h, src/prefs.c, src/keyfile.c,
   src/main.c, src/ui_utils.c, doc/geany.txt, doc/geany.html,
   geany.glade:
   Add sidebar position interface pref.


2009-10-23  Lex Trotman  <elextr.at.gmail.dot.com>

 * doc/geany.txt, doc/geany.html:
   Add missing underscores to links.


2009-10-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Move line(s) up/down' keybindings.


2009-10-22  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c, src/build.h, src/filetypes.h:
   Include code for project filetype execute commands and fix bug in
   saving project filetypes list.
 * src/project.c, src/build.c, doc/geany.txt: