@@ -8,6 +8,9 @@
    sciwrappers.h, build.h. (This helps to get compiler warnings for uses
    of functions not in the API).
    Warning: any plugins that include these headers should remove them.
+ * src/build.c, src/build.h:
+   Move function doc-comments to build.c so they stay in sync. Note:
+   these functions are still not in the API.
 
 
 2009-10-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
